[package]
name = "gt"
version = "0.1.0"
authors = ["aga7hokakological <iamsaurabhmandavkar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
regex = "1.3.9"
exitcode = "1.1.2"
lazy_static = "1.4.0"
skim = "0.8.2"
